fix: fixed 404 and text align

--- a/assets/sass/pages/_single.scss
+++ b/assets/sass/pages/_single.scss
@@ -1,7 +1,7 @@
 @import "../utils/variables";
 
 .postWrapper {
-    text-align: left;
+    text-align: justify;
     padding: 20px;    
 }
 
